--- a/src/app/pages/jugar/jugar.page.html
+++ b/src/app/pages/jugar/jugar.page.html
@@ -1,4 +1,19 @@
+<ion-header [translucent]="true">
+  <ion-toolbar>
+    <ion-title>Nivel: {{nivel.name}}</ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content [fullscreen]="true">
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title size="small">Nivel: {{nivel.name}}</ion-title>
+    </ion-toolbar>
+  </ion-header>
+
+
 <ion-content class="ion-padding">
+ <ion-icon name="volume-mute-outline" (click)="toggleAudio()" [style.color]="audioMuted ? 'red' : 'initial'"></ion-icon>
   <p>{{jugador}}</p>
 
   <app-fila *ngFor="let item of iteraciones; let i = index"
@@ -14,8 +29,10 @@
     <div *ngIf="!ganaste && perdiste" class="mensaje-perdiste">
       ¡Perdiste! 
     </div>
-    <audio #audioPlayer loop autoplay>
-      <source src="../../../assets/audio/jmesa.mp3 " type="audio/mpeg">
+
+    
+    <audio #audioPlayer loop autoplay muted>
+      <source src="../../../assets/audio/jmesa.mp3" type="audio/mpeg">
     </audio>
     
 </ion-content>
