--- a/src/app/pages/jugar/jugar.page.html
+++ b/src/app/pages/jugar/jugar.page.html
@@ -32,7 +32,7 @@
 
     
     <audio #audioPlayer loop autoplay muted>
-      <source src="../../../assets/audio/jmesa.mp3" type="audio/mpeg">
+      <source src="../../../assets/audio/jmesa1.mp3" type="audio/mpeg">
     </audio>
     
 </ion-content>
