--- a/src/app/components/celda/celda.component.html
+++ b/src/app/components/celda/celda.component.html
@@ -2,4 +2,5 @@
     [ngClass]="{'verde': css === 'acierto', 'naranja': css === 'casi', 'rojo': css === 'fallo'}"
     maxlength="1"
     [(ngModel)]="opcion"
-    [readonly]="disabled"></ion-input>
+    [readonly]="disabled"
+    (input)="onInput($event)"></ion-input>
