--- a/src/app/pages/nevel/nevel.page.scss
+++ b/src/app/pages/nevel/nevel.page.scss
@@ -8,7 +8,12 @@ ion-content {
 }
 .divpadding {
     background: rgba(0, 0, 0, 0.397);
+
 }
 .divpadding h1 {
     text-align: center;
+    color:rgb(240, 255, 255)
+}
+.divpadding h2 {
+    color:rgb(240, 255, 255)
 }
