--- a/src/app/pages/record/record.page.html
+++ b/src/app/pages/record/record.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>Records</ion-title>
+    <ion-title>Record</ion-title>
   </ion-toolbar>
 </ion-header>
 
