--- a/src/app/pages/jugar/jugar.page.html
+++ b/src/app/pages/jugar/jugar.page.html
@@ -63,9 +63,13 @@
             <ion-label>{{ usuario.tiempo }} segundos</ion-label>
           </ion-item>
         </ion-list>
-    
+     <!-- Botón para abrir la cámara -->
+     <ion-button (click)="abrirCamara()" slot="end">
+      Tomar Foto
+    </ion-button>
         <ion-label *ngIf="usuariosConTiempos.length === 0">No hay usuarios con tiempos registrados.</ion-label>
       </ion-card-content>
+        
     </ion-card>
     
 </ion-content>
