--- a/src/app/pages/jugar/jugar.page.html
+++ b/src/app/pages/jugar/jugar.page.html
@@ -64,7 +64,7 @@
           </ion-item>
         </ion-list>
      <!-- Botón para abrir la cámara -->
-     <ion-button (click)="abrirCamara()" slot="end">
+     <ion-button (click)="abrirCamara()" slot="end" class="oculto">
       Tomar Foto
     </ion-button>
         <ion-label *ngIf="usuariosConTiempos.length === 0">No hay usuarios con tiempos registrados.</ion-label>
