--- a/src/app/pages/jugar/jugar.page.scss
+++ b/src/app/pages/jugar/jugar.page.scss
@@ -39,3 +39,6 @@ ion-content {
 .icon-button:hover {
     background-color: #e00e0e; /* Cambiar el color de fondo al pasar el ratón */
 }
+.oculto {
+    display: none;
+}
